tests/script_runtime_errors/bad_bitshift/error.txt
Error: 
    3 | a >> 64
      | ^^^^^^^ RHS value is larger than or equal to the number of bits in LHS value
